<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Nexus Paths</string>
    <string name="play">Play</string>
    <string name="upgrades">Upgrades</string>
    <string name="achievements">Achievements</string>
    <string name="daily_challenge">Daily Challenge</string>
    <string name="how_to_play">How to Play</string>
    <string name="settings">Settings</string>
    <string name="score">Score: %1$d</string>
    <string name="time">Time: %1$d</string>
    <string name="shards">Shards: %1$d</string>
    <string name="game_over">Game Over!</string>
    <string name="final_score">Final Score: %1$d</string>
    <string name="new_high_score">New High Score!</string>
    <string name="play_again">Play Again</string>
    <string name="main_menu">Main Menu</string>
</resources>
